# comment-intel

./: .gitignore  LICENSE  README.md  WORKSHOP.md  config.example.env  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json
.claude/skills/comment-intel/: SKILL.md
comment-intel/.claude-plugin/: plugin.json
comment-intel/commands/: run.md  setup.md
comment-intel/skills/comment-intel/: SKILL.md
comment-intel/skills/comment-intel/references/: 01-create-meta-app.md  02-cloudflare-r2.md  03-usage.md  04-troubleshooting.md
comment-intel/skills/comment-intel/scripts/: comment_intel.py
comment-intel/skills/comment-intel/scripts/intel/: __init__.py  doctor.py  gallery.py  metaapi.py  r2.py  setup_wizard.py
docs/: 01-create-meta-app.md  02-cloudflare-r2.md  03-usage.md  04-troubleshooting.md
intel/: __main__.py  config.py  gallery.py  metaapi.py  pull_comments.py  rank_posts.py  run.py  setup_wizard.py
